[package]
name = "xn-moshi-ws-server"
version = "0.1.12"
edition = "2024"
description = "WebSocket server for Moshi using xn"
repository = "https://github.com/LaurentMazare/xn-moshi-ws-server"
keywords = ["pytorch", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["ws", "tokio", "http1", "macros"] }
base64 = "0.22"
bytemuck = "1"
byteorder = "1.5.0"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
half = { version = "2.7.1", features = ["num-traits"] }
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }
kaudio = "0.2.1"
rand = { version = "0.9.0", default-features = false }
rand_distr = "0.5.0"
rubato = "0.15.0"
sentencepiece = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
xn = "0.1.12"
xn-moshi = "0.1.12"

[features]
default = []
cuda = ["xn/cuda"]
accelerate = ["xn/accelerate"]
